[package]
name = "battleship"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
pixels = "0.6.0"
rand = "0.8.4"
ron = "0.6.4"
rusttype = { version = "0.9.2", features = ["gpu_cache"] }
serde = { version = "1.0.130", features = ["derive"] }
winit = "0.25.0"
winit_input_helper = "0.10.0"
